--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="social stat-box">
       <!--LinkedIn logo with link-->
       <p>You can find me on <a class="linkedin"
-        href="https://www.linkedin.com/in/harshit-yadav-7/"
+        href="https://www.linkedin.com/in/harshityadav76/"
         target="_blank"
         ><img src="Pictures/LinkedInImage.png" alt="LinkedIn"/></a></p>
       <div class="icons">
